@@ -1,7 +1,7 @@
 Package: biostatUZH
 Title: Misc Tools of the Department of Biostatistics, EBPI, University of Zurich
-Version: 1.5.2
-Date: 2015-09-09
+Version: 1.5.3
+Date: 2015-10-16
 Authors@R: c(person(c("Sarah", "R."), "Haile", role = "aut",
                     email = "sarah.haile@kssg.ch"),
              person("Leonhard", "Held", role = "aut",
@@ -35,7 +35,7 @@ Description: Various functions developed at the Department of Biostatistics,
              a plot to check the adequacy of the Weibull model.
 License: GPL (>=2)
 URL: http://www.biostat.uzh.ch, http://ebuzh.r-forge.r-project.org
-Depends: R (>= 2.15.0), graphics, stats, survival (>= 2.35)
+Depends: R (>= 2.15.0), grDevices, graphics, stats, survival (>= 2.35)
 Imports: boot
 Suggests: cmprsk, lme4, prodlim, psy, xtable,
         reporttools, Hmisc, surveillance
